# django_diploma

./: .env  README.md  db.sqlite3  pyproject.toml
auth_app/: admin.py  models.py  serializers.py  urls.py  views.py
auth_app/migrations/: 0001_initial.py  0002_alter_profile_avatar.py  0003_rename_first_name_profile_name_and_more.py  0004_rename_name_profile_fullname.py  0005_avatarprofile_alter_profile_avatar.py  0006_alter_profile_avatar.py  0007_alter_profile_avatar.py
diploma/: settings.py  urls.py
fixtures/: main_data.json
main_app/: admin.py  crutch.py  models.py  serializer.py  urls.py  views.py
main_app/migrations/: 0001_initial.py  0002_payment_method_order.py  0003_alter_review_score.py  0004_alter_order_user.py  0005_alter_order_user.py  0006_categories_deliverytype_payment_tags_and_more.py  0007_alter_product_image.py  0008_alter_order_author_alter_review_author_and_more.py  0009_alter_product_review.py  0010_remove_product_review_review_product.py  0011_order_in_order.py  0012_alter_product_options_rename_name_product_title_and_more.py  0013_rename_name_categories_title.py  0014_product_available_product_free_delivery.py  0015_categories_image.py  0016_product_datefrom_product_dateto.py  0017_rename_categories_product_category.py  0018_product_count.py  0019_alter_product_available_alter_product_count.py  0020_alter_product_datefrom_alter_product_dateto_and_more.py  0021_rename_free_delivery_product_freedelivery_and_more.py  0022_rename_image_product_images.py  0023_remove_review_product_product_reviews_and_more.py  0024_product_rating.py  (+52 more)
